--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -37,41 +38,40 @@
     "@babel/preset-react": "^7.14.5",
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo-google-fonts/rajdhani": "^0.2.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "expo": "^42.0.0",
-    "expo-ads-admob": "~10.1.2",
+    "expo": "^50.0.8",
     "expo-app-loading": "^1.1.2",
-    "expo-constants": "^11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-intent-launcher": "~9.1.0",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-linking": "~2.3.1",
-    "expo-location": "~12.1.2",
-    "expo-modules-core": "^0.2.0",
-    "expo-status-bar": "~1.0.4",
-    "expo-store-review": "~4.1.0",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
+    "expo-intent-launcher": "~10.11.0",
+    "expo-linear-gradient": "~12.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
+    "expo-modules-core": "~1.11.8",
+    "expo-status-bar": "~1.11.1",
+    "expo-store-review": "~6.8.3",
     "geolib": "^3.3.1",
     "i18n-js": "^3.8.0",
     "moment": "^2.29.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-is": "^17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.17.1",
-    "styled-components": "^5.3.0"
+    "react-native-web": "~0.19.6",
+    "styled-components": "^5.3.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.15.4",
-    "@testing-library/jest-native": "^4.0.2",
+    "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^27.0.1",
     "@types/styled-components-react-native": "^5.1.1",
@@ -85,9 +85,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.11.0",
-    "jest-expo": "^42.1.0",
-    "prettier": "^2.3.2",
-    "react-test-renderer": "^17.0.2"
+    "jest-expo": "~50.0.2",
+    "prettier": "^2.3.2"
   },
   "private": true
 }
